fix overflow 2

--- a/style/style.css
+++ b/style/style.css
@@ -65,7 +65,7 @@ body {
 
     max-width: 100vw;
 
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .title {
